--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
             flex-direction: column; /* Đặt ảnh theo cột */
         }
         img {
-            width: 30%; /* Giảm kích thước ảnh xuống 1/3 */
+            width: 60%; /* Tăng kích thước ảnh lên gấp 2 lần */
             height: auto;
             border-radius: 10px;
             display: none;
+            position: relative; /* Đảm bảo không bị che bởi trái tim */
+            z-index: 1; /* Đặt z-index cao hơn cho ảnh */
         }
         #final-message {
             margin-top: 30px;
@@ -51,6 +53,7 @@
             font-size: 30px; /* Kích thước trái tim */
             position: absolute; /* Đặt trái tim ở vị trí tuyệt đối */
             animation: float 3s ease-in-out infinite; /* Hiệu ứng nhấp nháy */
+            z-index: 0; /* Đặt z-index thấp hơn cho trái tim */
         }
         .blink {
             animation: blink-animation 1s steps(5, start) infinite; /* Hiệu ứng nhấp nháy */
@@ -69,14 +72,14 @@
 </head>
 <body>
 
-    <h1>Cảm ơn cậu vì đã ở bên tui tới một năm gưỡi lun nhe</h1>
+    <h1>Cảm ơn cậu vì đã ở bên tui tới một năm gưỡi lun nhe!!!!!!</h1>
     
     <div id="message"></div>
     
     <div id="image-slider">
         <!-- Tạo 25 thẻ img cho trình chiếu -->
         <script>
-            for (let i = 1; i <= 25; i++) {
+            for (let i = 1; i <= 24; i++) {
                 document.write(`<img src="anh${i}.jpg" alt="Hình ảnh ${i}" id="img${i}">`);
             }
         </script>
@@ -95,7 +98,7 @@
 
     <script>
         // Ngày bắt đầu
-        const startDate = new Date('2023-01-26'); // Thay đổi ngày bắt đầu ở đây
+        const startDate = new Date('2023-01-25'); // Thay đổi ngày bắt đầu ở đây
         const today = new Date();
         const timeDiff = today - startDate;
 
@@ -128,7 +131,7 @@
                 setTimeout(() => {
                     images[currentImage - 1].style.display = 'none';
                     showImages();
-                }, 1500); // Hiển thị mỗi ảnh trong 3 giây
+                }, 1500); // Hiển thị mỗi ảnh trong 1,5 giây
             } else {
                 // Hiển thị thông điệp tình yêu sau khi trình chiếu xong
                 setTimeout(() => {
