--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
             50% { transform: translateY(-20px); }
             100% { transform: translateY(0); }
         }
+		audio {
+            display: none; /* Ẩn trình phát nhạc */
+        }
     </style>
 </head>
 <body>
@@ -95,6 +98,12 @@
         <span class="heart">❤️</span>
         <span class="heart">❤️</span>
     </div>
+	
+	 <audio id="background-music" loop>
+        <source src="nhacnen.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+
 
     <script>
         // Ngày bắt đầu
@@ -149,6 +158,11 @@
             heart.style.top = Math.random() * 100 + 'vh'; // Vị trí dọc ngẫu nhiên
             document.body.appendChild(heart);
         }
+		// Phát nhạc nền
+        window.onload = function() {
+            const audio = document.getElementById('background-music');
+            audio.play();
+        };
     </script>
 
 </body>
