--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             position: relative; /* Đảm bảo không bị che bởi trái tim */
             z-index: 2; /* Z-index cao hơn trái tim */
         }
-        #final-message {
+         #final-message {
             margin-top: 30px;
-            font-size: 20px;
-            color: #555;
+            font-size: 32px; /* Kích thước lớn hơn */
+            color: #ff6347; /* Màu đỏ giống tiêu đề */
             position: relative; /* Đảm bảo chữ nằm trên trái tim */
             z-index: 2; /* Z-index cao hơn trái tim */
         }
@@ -83,7 +83,7 @@
 </head>
 <body>
 
-    <h1>Cảm ơn cậu vì đã ở bên tui tới một năm gưỡi lun nhe!!!!!!</h1>
+    <h1>❤️❤️❤️Cảm ơn cậu vì đã ở bên tui tới một năm gưỡi lun nhe!!!!!!❤️❤️❤️</h1>
     
     <div id="message"></div>
     
@@ -97,7 +97,7 @@
     </div>
 
     <div id="final-message">
-        <p>Mong rằng mình sẽ bên nhau lâu thật lâu hơn nhaaaaaaaaaaaaaaa</p>
+        <p>❤️❤️❤️Mong rằng mình sẽ bên nhau lâu thật lâu hơn nhaaaaaaaaaaaaaaa❤️❤️❤️</p>
     </div>
 
     <div id="love-message">
